# flutter_blue_plus

./: .gitignore  .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  README  fluid-android-compile.sh  fluid-android-download-and-compile.sh  fluid-android-prepare.sh  fluid-clean.sh  native-lib.cpp
android/src/main/java/com/artinoise/flutter_synth/: FlutterSynthPlugin.java
android/src/main/java/com/artinoise/ocarina/: CircularFifoArray.java  DriverBase.java  FluidSynthDriver.java  FlutterMidiSynthPlugin.kt  GeneralMidiConstants.java  MidiBridge.java  MidiConstants.java
android/src/main/java/com/artinoise/recorder/: CircularFifoArray.java  DriverBase.java  FluidSynthDriver.java  FlutterMidiSynthPlugin.kt  GeneralMidiConstants.java  MidiBridge.java  MidiConstants.java
android/src/main/java/com/boskokg/flutter_blue_plus/: FlutterBluePlusPlugin.java
android/src/main/java/com/lib/flutter_blue_plus/: FlutterBluePlusPlugin.java
android/src/main/kotlin/com/boskokg/flutter_blue_plus/: FlutterBluePlusPlugin.kt
example/: pubspec.yaml
example/android/app/src/main/java/com/boskokg/flutter_blue_plus_example/: MainActivity.java
example/lib/: main.dart
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
ios/: flutter_synth.podspec
ios/Classes/: FlutterBluePlusPlugin.h  FlutterBluePlusPlugin.m  SwiftFlutterMidiSynthPlugin.swift
ios/Classes/MidiSynth/: AudioCommon.swift
lib/: flutter_blue_plus.dart  flutter_blue_plus_method_channel.dart  flutter_blue_plus_platform_interface.dart  flutter_synth.dart
lib/src/: FlutterMidiSynthPlugin.dart  flutter_blue_plus.dart  flutter_synth.dart  utils.dart
macos/Classes/: FlutterBluePlusPlugin.m  FlutterMidiSynthPlugin.h  FlutterMidiSynthPlugin.m  SwiftFlutterMidiSynthPlugin.swift
macos/Classes/MidiSynth/: AudioCommon.swift  SoftSynth.swift
test/: flutter_blue_plus_method_channel_test.dart  flutter_blue_plus_test.dart
(+1 files in other folders)
